# temperature-web-app

./: CMakeLists.txt  prj_conf_bak
app/: CMakeLists.txt  prj.conf  sections-html.ld  sections-rom.ld
app/boards/: same54_xpro.overlay
app/src/: index_html.inc  main.c  resources.c
app/static/: index.html
include/app/: headers.h  index_html.h
